Fix mtx-loader being too high pushing card after it off the viewport

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -211,3 +211,7 @@ div.page-toggles {
         }
     }
 }
+
+mtx-loader.mtx-loader {
+    height: unset;
+}
